--- a/config/database.yml
+++ b/config/database.yml
@@ -1,25 +1,34 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
-#
 default: &default
-  adapter: sqlite3
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  timeout: 5000
+  adapter: postgresql
+  encoding: utf8
+  port: 5432
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  username: till
+  password: till@321
+  host: localhost
+  database: dev_till_core
+
+production: &production
+  <<: *default
+  username: <%= ENV['APP_DATABASE_USER'] || 'till' %>
+  password: <%= ENV['APP_DATABASE_PASS'] || 'till@321' %>
+  database: <%= ENV['APP_DATABASE_NAME'] || 'staging_till_core' %>
+  host: <%= ENV['APP_DATABASE_HOST'] || 'localhost' %>
+
+staging: &staging
+  <<: *default
+  username: till
+  password: till@321
+  host: localhost
+  database: staging_till_core
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test.sqlite3
-
-production:
-  <<: *default
-  database: db/production.sqlite3
+  database: till_core_test
+  username: till
+  password: till@321
